# XMRGTask

./: celery_xmrgtask_daemon.service  config_template.py  email_results.py  pyproject.toml  task_creator.py  xmrg_celery_app.py
config/: celery_task_logging.conf
xmrg_processing/: boundariesparse.py  csvdatasaver.py  smtp_utils.py  xmrg_multiproc_processing.py  xmrg_process.py
