[tool.poetry]
name = "xmrgtask"
version = "0.1.0"
description = ""
authors = ["DANRAMAGE <ChiefDan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xmrgprocessing = {git = "https://github.com/DanRamage/xmrgprocessing.git"}
celery = "^5.4.0"
geojson = "^3.1.0"
dateparser = "^1.2.0"
pydevd-pycharm = "^243.23654.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
